--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 ﻿{
   "compileOnSave": true,
   "compilerOptions": {
-    "sourceRoot": "ts",
-    "target": "es2017",
+    "sourceRoot": "src",
+    "target": "esnext",
     "module": "system",
-    "lib": [ "dom", "es2017" ],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "noImplicitAny": false,
     "noImplicitThis": false,
     "removeComments": false,
     "preserveConstEnums": true,
-    "outFile": "js/HtmlAlign.js",
+    "outFile": "dist/HtmlAlign.js",
     "sourceMap": true
   }
 }
